--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,5 +1,5 @@
 .header__logo {
-  background-image: url(../../../images/__logo.svg);
+  background-image: url(../../../images/logo.svg);
   width: 142px;
   height: 42px;
   background-size: cover;
