--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,3 +8,33 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media screen and (min-width: 320px) {
+  .header__logo {
+    width: 142px;
+    height: 42px;
+  }
+  .header__lang-links {
+    display: flex;
+    margin-top: 30px;
+  }
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 24px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__logo {
+    width: 176px;
+    height: 52px;
+  }
+  .header__lang-links {
+    display: flex;
+    margin-top: 46px;
+  }
+  .header__lang-link {
+    font-size: 24px;
+    line-height: 28px;
+  }
+}
