--- a/blocks/lead/__image/_map/lead__image_map.css
+++ b/blocks/lead/__image/_map/lead__image_map.css
@@ -1,9 +1,9 @@
 .lead__image_map {
   background-image: url(../../../../images/lead_map.svg);
   background-size: contain;
-  height: 262.99px;
+  /* height: 262.99px; */
   margin: 0 auto;
-  width: 937.09px;
+  /* width: 937.09px; */
   margin-top: 90.21px;
   text-align: center;
   background-repeat: no-repeat;
