--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,2 +1,7 @@
+@import url(__title/intro__title.css);
+@import url(__text/intro__text.css);
+@import url(__list/intro__list.css);
+@import url(__list-item/_no-bold/);
+
 .intro {
 }
