--- a/pages/page.css
+++ b/pages/page.css
@@ -2,6 +2,7 @@
 @import url(../Inter-3.13/Inter_Web/inter.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/lead/lead.css);
+@import url(../blocks/intro/intro.css);
 
 .page {
   background-color: #2a2c2f;
