--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,7 +1,51 @@
 @import url(__title/intro__title.css);
 @import url(__text/intro__text.css);
 @import url(__list/intro__list.css);
-@import url(__list-item/_no-bold/);
+@import url(__list-item/intro__list-item.css);
 
 .intro {
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 320px) {
+  .intro {
+    max-width: 288px;
+    margin-top: 64px;
+  }
+
+  .intro__title {
+    font-size: 32px;
+    line-height: 35px;
+    width: 288px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .intro {
+    max-width: 720px;
+    margin-top: 88px;
+  }
+
+  .intro__title {
+    font-size: 54px;
+    line-height: 58px;
+    width: 720px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .intro {
+    max-width: 690px;
+    margin-top: 92px;
+    margin-left: 48px;
+  }
+  .intro__title {
+    width: 690px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .intro {
+    margin-left: 148px;
+  }
 }
