--- a/pages/index.css
+++ b/pages/index.css
@@ -3,8 +3,9 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/intro/intro.css);
+@import url(../blocks/photo-grid/photo-grid.css);
 
-.page {
+.index {
   background-color: #2a2c2f;
   font-family: Inter;
   color: #ffffff;
