add changes for styles

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,37 +4,30 @@
 
 .header {
   margin: 0 auto;
-  width: 95%;
   display: flex;
   justify-content: space-between;
 }
 
 @media screen and (min-width: 320px) {
-  .header__logo {
-    width: 142px;
-    height: 42px;
-  }
-  .header__lang-links {
-    display: flex;
-    margin-top: 30px;
-  }
-  .header__lang-link {
-    font-size: 18px;
-    line-height: 24px;
+  .header {
+    max-width: 288px;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .header__logo {
-    width: 176px;
-    height: 52px;
+  .header {
+    max-width: 720px;
   }
-  .header__lang-links {
-    display: flex;
-    margin-top: 46px;
+}
+
+@media screen and (min-width: 1024px) {
+  .header {
+    max-width: 928px;
   }
-  .header__lang-link {
-    font-size: 24px;
-    line-height: 28px;
+}
+
+@media screen and (min-width: 1280px) {
+  .header {
+    max-width: 1184px;
   }
 }
