--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -1,3 +1,17 @@
 .header__lang-links {
   display: flex;
 }
+
+@media screen and (min-width: 320px) {
+  .header__lang-links {
+    display: flex;
+    margin-top: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__lang-links {
+    display: flex;
+    margin-top: 46px;
+  }
+}
