--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,3 +2,25 @@
   text-align: start;
   margin: 0;
 }
+
+@media screen and (min-width: 320px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 35px;
+    width: 288px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .intro__title {
+    font-size: 54px;
+    line-height: 58px;
+    width: 720px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .intro__title {
+    width: 690px;
+  }
+}
