--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -6,3 +6,21 @@
   text-align: start;
   margin: 0;
 }
+
+@media screen and (min-width: 320px) {
+  .lead__caption {
+    margin-left: 16px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .lead__caption {
+    margin-left: 24px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .lead__caption {
+    margin-left: 0;
+  }
+}
