--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -8,3 +8,34 @@
   flex-direction: column;
   background-size: contain;
 }
+
+@media screen and (min-width: 320px) {
+  .lead__image {
+    max-width: 320px;
+    min-height: 200px;
+    margin-top: 40px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .lead__image {
+    max-width: 768px;
+    min-height: 480px;
+    margin-top: 56px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .lead__image {
+    max-width: 928px;
+    min-height: 580px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .lead__image {
+    min-height: 615px;
+    min-width: 984px;
+    margin-top: 64px;
+  }
+}
