--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,2 +1,23 @@
-.photo-grid__item {
+@media screen and (min-width: 320px) {
+  .photo-grid__item {
+    min-height: 216px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .photo-grid__item {
+    min-height: 264px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .photo-grid__item {
+    min-height: 225px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .photo-grid__item {
+    min-height: 213px;
+  }
 }
