--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,2 +1,31 @@
 .places {
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 320px) {
+  .places {
+    max-width: 320px;
+    margin-top: 64px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .places {
+    max-width: 720px;
+    margin-top: 88px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .places {
+    max-width: 928px;
+    margin-top: 92px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .places {
+    max-width: 984px;
+    margin-top: 92px;
+  }
 }
