--- a/pages/index.css
+++ b/pages/index.css
@@ -6,6 +6,8 @@
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/places/places.css);
 @import url(../blocks/place/place.css);
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/footer/footer.css);
 
 .index {
   background-color: #2a2c2f;
