--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -4,3 +4,21 @@
   line-height: 26px;
   margin-top: 40px;
 }
+
+@media screen and (min-width: 320px) {
+  .intro__text {
+    max-width: 288px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .intro__text {
+    max-width: 720px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .intro__text {
+    max-width: 690px;
+  }
+}
