--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -3,7 +3,7 @@
 }
 
 @media screen and (min-width: 320px) {
-  .cover {
+  .cover__subtitle {
     max-width: 288px;
     margin-top: 16px;
     font-size: 14px;
