--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,8 +1,8 @@
 .header__lang-link {
   margin: 0 18px 0 0;
-  border: none;
+  text-decoration: none;
   color: white;
-  background-color: inherit;
+  transition: opacity 1.5s ease-out;
 }
 
 .header__lang-link:last-child {
@@ -11,11 +11,11 @@
 
 .header__lang-link:hover {
   cursor: pointer;
+  opacity: 0.8;
 }
 
 .header__lang-link:focus {
   text-decoration: underline;
-  outline: none;
 }
 
 @media screen and (min-width: 320px) {
