--- a/blocks/place/__website/_link/place__website_link.css
+++ b/blocks/place/__website/_link/place__website_link.css
@@ -1,9 +1,9 @@
-.place__website__link {
+.place__website_link {
   font-size: 18px;
   line-height: 22px;
 }
 @media screen and (min-width: 320px) {
-  .place__website__link {
+  .place__website_link {
     color: #2a2c2f;
     height: 0;
     pointer-events: none;
@@ -11,13 +11,13 @@
 }
 
 @media screen and (min-width: 768px) {
-  .place__website__link {
+  .place__website_link {
     height: auto;
     pointer-events: fill;
     color: white;
     transition: opacity 1.5s ease-out;
   }
-  .place__website__link:hover {
+  .place__website_link:hover {
     opacity: 0.8;
   }
 }
