--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,5 +1,10 @@
-@import url(__url-heading/place__website__url-heading.css);
-@import url(__link/place__website__link.css);
+@import url(_url-heading/place__website_url-heading.css);
+@import url(_link/place__website_link.css);
+
+.place__website {
+  display: flex;
+  flex-direction: column;
+}
 
 @media screen and (min-width: 320px) {
   .place__website {
