--- a/blocks/intro/__list-item/intro__list-item.css
+++ b/blocks/intro/__list-item/intro__list-item.css
@@ -1,13 +1,9 @@
+@import url(_normal/intro__list-item_normal.css);
+
 .intro__list-item {
   font-weight: bold;
   display: flex;
   margin: 0;
   font-size: 12px;
   line-height: 18px;
-}
-
-.intro__list-item p {
-  font-weight: normal;
-  margin: 0;
-  margin-left: 10px;
 }
