--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -7,17 +7,33 @@
   background-size: cover;
   background-repeat: no-repeat;
   margin: 0 auto;
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
+  color: #fff;
+  text-decoration: none;
   text-align: center;
   background-position: center;
+}
+.cover:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 1);
+  opacity: 0.5;
+  z-index: -1;
+  transition: opacity 200ms ease-in-out;
+}
+
+.cover:hover:before {
   opacity: 0.8;
-  z-index: 1;
 }
-
-.cover:hover {
-  opacity: 0.3;
-  transition: 1s ease-out;
-}
-
 @media screen and (min-width: 320px) {
   .cover {
     max-width: 320px;
