--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,3 +1,4 @@
+@import url(__list/footer__list.css);
 @import url(__links/footer__links.css);
 @import url(__link/footer__link.css);
 @import url(__copyright/footer__copyright.css);
