--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -13,9 +13,9 @@
   cursor: pointer;
   opacity: 0.8;
 }
-
 .header__lang-link:focus {
   text-decoration: underline;
+  outline: none;
 }
 
 @media screen and (min-width: 320px) {
