--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,15 +1,15 @@
-.place__website_url-heading {
+.place__url-heading {
   margin: 0;
 }
 @media screen and (min-width: 320px) {
-  .place__website_url-heading {
+  .place__url-heading {
     color: #2a2c2f;
     height: 0;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .place__website_url-heading {
+  .place__url-heading {
     color: #aaaaaa;
     margin-bottom: 12px;
     height: auto;
@@ -20,7 +20,7 @@
 }
 
 @media screen and (min-width: 1024px) {
-  .place__website_url-heading {
+  .place__url-heading {
     line-height: 170%;
   }
 }
