--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -25,7 +25,7 @@
   bottom: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 1);
+  background-color: #2a2c2f;
   opacity: 0.5;
   z-index: -1;
   transition: opacity 200ms ease-in-out;
