--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,7 @@
 @import url(__logo/header__logo.css);
 @import url(__lang-links/header__lang-links.css);
 @import url(__lang-link/header__lang-link.css);
+@import url(__lang-link/_active/header__lang-link_active.css);
 
 .header {
   margin: 0 auto;
