--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,7 +2,7 @@
 @import url(__text/intro__text.css);
 @import url(__list/intro__list.css);
 @import url(__list-item/intro__list-item.css);
-
+@import url(__list-item-text/intro__list-item-text.css);
 .intro {
   margin: 0 auto;
 }
